fixed the alignment

--- a/style.css
+++ b/style.css
@@ -4,6 +4,8 @@ body{
     display: flex;
     flex-direction: column ;
     /* height: 100%; */
+    margin: 0;
+    padding: 0;
 }
 
 .upper
